react-app/src/components/Food/FoodSearch/SearchBar.css
.search-bar {
    width: 250px;
    height: 50px;
    padding: 0px 10px;
    overflow: auto;
    cursor: text;
    box-shadow: 0 0 10px rgba(142, 142, 142, 0.5);
    font-size: 16px;
    font-weight: 200;
    border: none;
    border-radius: 3px;
}

.food-search-bar-container {
    /* top: 50%;
    left: 50%; */
    background-image: url('../../images/food_search_image.png');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    height: 2300px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    /* margin-top: 100px; */
}

.search-bar-button {
    box-sizing: border-box;
    text-align: center;
    background-color: #0077ff;
    color: rgb(255, 255, 255);
    border-radius: 10%;
    width: 55px;
    height: 51px;
    border: none;
    cursor: pointer;
}

.search-bar-button:hover {
    background-color: #0066cc;
}

.entry:hover {
    background-color: rgb(0, 136, 255);
    border-radius: 3px;
}

.food-search-bar-container .common-list {
    /* position: absolute; */
    /* background-color:rgb(255, 255, 255, 0.5); */
    width: 270px;
    /* padding: 50px; */
}

.food-search-bar-container .branded-list {
    /* position: absolute; */
    /* background-color:rgb(255, 255, 255, 0.5); */
    width: 270px;
    padding-left: 15px;
}

.food-search-bar-container .rda {
    /* position: absolute; */
    /* background-color:rgb(255, 255, 255, 0.5); */
    width: 370px;
}

.food-search-container {
    margin-top: 100px;
    height: 2120px;
    background-color: rgb(255, 255, 255, 0.7);
    border-radius: 10px;
}

